--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
       <li><a href="task-09.html">Task 9</a></li>
       <li><a href="task-10.html">Task 10 (optional)</a></li>
     </ul>
-    <script src="/src/js/"></script>
+    <script src="./js/"></script>
   </body>
 </html>
